# is25lp128f

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  build.rs
examples/: stm32wba65ri.rs
src/: is25lp128f.yaml  lib.rs  prelude.rs  sfdp.rs  spi_device.rs
